@@ -4453,3 +4453,5 @@
          mutex before closing (patch #308) (Sergio).
 20130325 ui/widget/options.pl: run the peripherals posthook at the appropriate
          point to work (bug #281) (Sergio and Fred).
+20130404 ui/win32/win32joystick.c: fix input events fired when various joystick
+         buttons are pressed simultaneously (Sergio).
